@@ -12,12 +12,13 @@ Not ready yet (1.0beta4):
 
 [ CORE. Support for Service Tree ] 
 [ CORE. PostgreSQL ]
-[ DOC. Add MySQL-dev and PostgreSQL-dev ]
+[ PHP. Division by zero in Report2 ]
 
 [ PHP. Navigation by time period for graphs and trends ]
 
 Changes for 1.0beta4:
 
+ - many improvements for PostgreSQL support (Alexei)
  - added item which reflects host status (0-normal, 2-unreachable) (Alexei)
  - fixed function apply_actions() (Alexei)
  - added Next100 and Prev100 for alerts and alarms (Alexei)
